force-app/main/default/objects/Avenimiento__c/Avenimiento__c.object-meta.xml
<CustomObject>
    <description>Objeto Avenimiento que guardar información de avenimientos diarios disponibles para generar archivo pdf declaración.</description>
    <label>Avenimiento</label>
    <nameField>
        <label>Nombre de Avenimiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Avenimientos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>