force-app/main/default/objects/Avenimiento__c/fields/Comuna__c.field-meta.xml
<CustomField>
    <fullName>Comuna__c</fullName>
    <label>Comuna</label>
    <length>200</length>
    <type>Text</type>
</CustomField>