force-app/main/default/objects/Avenimiento__c/fields/Cuenta_Asociada__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Asociada__c</fullName>
    <description>cuenta desde la cual se generara avenimiento</description>
    <label>Cuenta Asociada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Avenimientos</relationshipLabel>
    <relationshipName>Avenimientos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>