force-app/main/default/objects/Avenimiento__c/fields/Digito__c.field-meta.xml
<CustomField>
    <fullName>Digito__c</fullName>
    <label>Digito</label>
    <length>1</length>
    <type>Text</type>
</CustomField>