force-app/main/default/objects/Avenimiento__c/fields/Fecha_Interfaz__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Interfaz__c</fullName>
    <label>Fecha Interfaz</label>
    <type>Date</type>
</CustomField>