force-app/main/default/objects/Avenimiento__c/fields/Juicio_A_o__c.field-meta.xml
<CustomField>
    <fullName>Juicio_A_o__c</fullName>
    <label>Juicio Año</label>
    <length>4</length>
    <type>Text</type>
</CustomField>