force-app/main/default/objects/Avenimiento__c/fields/Juicio_Juzgado__c.field-meta.xml
<CustomField>
    <fullName>Juicio_Juzgado__c</fullName>
    <label>Juicio Juzgado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>