force-app/main/default/objects/Avenimiento__c/fields/Juicio_Pcr__c.field-meta.xml
<CustomField>
    <fullName>Juicio_Pcr__c</fullName>
    <label>Juicio Pcr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>