force-app/main/default/objects/Avenimiento__c/fields/Juicio_Rol__c.field-meta.xml
<CustomField>
    <fullName>Juicio_Rol__c</fullName>
    <label>Juicio Rol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>