force-app/main/default/objects/Avenimiento__c/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <label>Nombre Cliente</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>