force-app/main/default/objects/Avenimiento__c/fields/Numero_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Cuenta__c</fullName>
    <label>Numero de Cuenta</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>