force-app/main/default/objects/Avenimiento__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>