force-app/main/default/objects/Avenimiento__c/fields/Profesion_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Profesion_Cliente__c</fullName>
    <label>Profesion_Cliente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>