force-app/main/default/objects/Avenimiento__c/fields/Rut__c.field-meta.xml
<CustomField>
    <fullName>Rut__c</fullName>
    <label>Rut</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>