force-app/main/default/objects/Avenimiento__c/fields/Separador__c.field-meta.xml
<CustomField>
    <fullName>Separador__c</fullName>
    <label>Separador</label>
    <length>1</length>
    <type>Text</type>
</CustomField>