force-app/main/default/objects/Avenimiento__c/fields/SubProducto__c.field-meta.xml
<CustomField>
    <fullName>SubProducto__c</fullName>
    <label>SubProducto</label>
    <length>4</length>
    <type>Text</type>
</CustomField>